--- a/docs/api-reference/CRMScript.NetServer.NSProvidedCredential.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProvidedCredential.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSProvidedCredential.#ctor
   - CRMScript.NetServer.NSProvidedCredential.GetCredentialId()
   - CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
   - CRMScript.NetServer.NSProvidedCredential.GetSearchName()
   - CRMScript.NetServer.NSProvidedCredential.GetType()
-  - CRMScript.NetServer.NSProvidedCredential.#ctor
   - CRMScript.NetServer.NSProvidedCredential.SetCredentialId(Integer)
   - CRMScript.NetServer.NSProvidedCredential.SetDisplayName(String)
   - CRMScript.NetServer.NSProvidedCredential.SetSearchName(String)
@@ -20,78 +20,6 @@ items:
   fullName: CRMScript.NetServer.NSProvidedCredential
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSProvidedCredential.GetCredentialId()
-  commentId: M:CRMScript.NetServer.NSProvidedCredential.GetCredentialId()
-  id: 'GetCredentialId()'
-  so.intellisense: NSProvidedCredential.GetCredentialId
-  langs:
-  - crmscript
-  name: 'GetCredentialId()'
-  nameWithType: NSProvidedCredential.GetCredentialId()
-  fullName: CRMScript.NetServer.NSProvidedCredential.GetCredentialId()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetCredentialId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
-  commentId: M:CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
-  id: 'GetDisplayName()'
-  so.intellisense: NSProvidedCredential.GetDisplayName
-  langs:
-  - crmscript
-  name: 'GetDisplayName()'
-  nameWithType: NSProvidedCredential.GetDisplayName()
-  fullName: CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetDisplayName()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProvidedCredential.GetSearchName()
-  commentId: M:CRMScript.NetServer.NSProvidedCredential.GetSearchName()
-  id: 'GetSearchName()'
-  so.intellisense: NSProvidedCredential.GetSearchName
-  langs:
-  - crmscript
-  name: 'GetSearchName()'
-  nameWithType: NSProvidedCredential.GetSearchName()
-  fullName: CRMScript.NetServer.NSProvidedCredential.GetSearchName()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetSearchName()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProvidedCredential.GetType()
-  commentId: M:CRMScript.NetServer.NSProvidedCredential.GetType()
-  id: 'GetType()'
-  so.intellisense: NSProvidedCredential.GetType
-  langs:
-  - crmscript
-  name: 'GetType()'
-  nameWithType: NSProvidedCredential.GetType()
-  fullName: CRMScript.NetServer.NSProvidedCredential.GetType()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetType()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProvidedCredential.#ctor
   commentId: M:CRMScript.NetServer.NSProvidedCredential.#ctor
@@ -108,6 +36,78 @@ items:
   syntax: 
     content: NSProvidedCredential
   example: 
+- uid: CRMScript.NetServer.NSProvidedCredential.GetCredentialId()
+  commentId: M:CRMScript.NetServer.NSProvidedCredential.GetCredentialId()
+  id: 'GetCredentialId()'
+  so.intellisense: NSProvidedCredential.GetCredentialId
+  langs:
+  - crmscript
+  name: 'GetCredentialId()'
+  nameWithType: NSProvidedCredential.GetCredentialId()
+  fullName: CRMScript.NetServer.NSProvidedCredential.GetCredentialId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetCredentialId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
+  commentId: M:CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
+  id: 'GetDisplayName()'
+  so.intellisense: NSProvidedCredential.GetDisplayName
+  langs:
+  - crmscript
+  name: 'GetDisplayName()'
+  nameWithType: NSProvidedCredential.GetDisplayName()
+  fullName: CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetDisplayName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSProvidedCredential.GetSearchName()
+  commentId: M:CRMScript.NetServer.NSProvidedCredential.GetSearchName()
+  id: 'GetSearchName()'
+  so.intellisense: NSProvidedCredential.GetSearchName
+  langs:
+  - crmscript
+  name: 'GetSearchName()'
+  nameWithType: NSProvidedCredential.GetSearchName()
+  fullName: CRMScript.NetServer.NSProvidedCredential.GetSearchName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetSearchName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSProvidedCredential.GetType()
+  commentId: M:CRMScript.NetServer.NSProvidedCredential.GetType()
+  id: 'GetType()'
+  so.intellisense: NSProvidedCredential.GetType
+  langs:
+  - crmscript
+  name: 'GetType()'
+  nameWithType: NSProvidedCredential.GetType()
+  fullName: CRMScript.NetServer.NSProvidedCredential.GetType()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
 - uid: CRMScript.NetServer.NSProvidedCredential.SetCredentialId(Integer)
   commentId: M:CRMScript.NetServer.NSProvidedCredential.SetCredentialId(Integer)
   id: 'SetCredentialId(Integer)'
@@ -121,9 +121,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetCredentialId(Integer p_0)
+    content: Void SetCredentialId(Integer id)
     parameters:
-    - id: p_0
+    - id: id
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -142,9 +142,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetDisplayName(String p_0)
+    content: Void SetDisplayName(String displayName)
     parameters:
-    - id: p_0
+    - id: displayName
       type: CRMScript.Global.String
       description: 
     return:
@@ -163,9 +163,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetSearchName(String p_0)
+    content: Void SetSearchName(String searchName)
     parameters:
-    - id: p_0
+    - id: searchName
       type: CRMScript.Global.String
       description: 
     return:
@@ -184,9 +184,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetType(String p_0)
+    content: Void SetType(String type)
     parameters:
-    - id: p_0
+    - id: type
       type: CRMScript.Global.String
       description: 
     return:
