--- a/docs/api-reference/CRMScript.NetServer.NSWebAppUsage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebAppUsage.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSWebAppUsage.#ctor
   - CRMScript.NetServer.NSWebAppUsage.GetAggregateBin()
   - CRMScript.NetServer.NSWebAppUsage.GetAggregateCount()
   - CRMScript.NetServer.NSWebAppUsage.GetAssocId()
@@ -13,11 +14,10 @@ items:
   - CRMScript.NetServer.NSWebAppUsage.GetVersion()
   - CRMScript.NetServer.NSWebAppUsage.GetViewState()
   - CRMScript.NetServer.NSWebAppUsage.GetWebAppUsageId()
-  - CRMScript.NetServer.NSWebAppUsage.#ctor
   - CRMScript.NetServer.NSWebAppUsage.SetAggregateBin(Integer)
   - CRMScript.NetServer.NSWebAppUsage.SetAggregateCount(Integer)
   - CRMScript.NetServer.NSWebAppUsage.SetAssocId(Integer)
-  - CRMScript.NetServer.NSWebAppUsage.SetTimestamp()
+  - CRMScript.NetServer.NSWebAppUsage.SetTimestamp(DateTime)
   - CRMScript.NetServer.NSWebAppUsage.SetVersion(Integer)
   - CRMScript.NetServer.NSWebAppUsage.SetViewState(String)
   - CRMScript.NetServer.NSWebAppUsage.SetWebAppUsageId(Integer)
@@ -26,6 +26,21 @@ items:
   fullName: CRMScript.NetServer.NSWebAppUsage
   type: Class
   summary: 
+  example: 
+- uid: CRMScript.NetServer.NSWebAppUsage.#ctor
+  commentId: M:CRMScript.NetServer.NSWebAppUsage.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSWebAppUsage
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSWebAppUsage.#ctor
+  fullName: CRMScript.NetServer.NSWebAppUsage.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSWebAppUsage
   example: 
 - uid: CRMScript.NetServer.NSWebAppUsage.GetAggregateBin()
   commentId: M:CRMScript.NetServer.NSWebAppUsage.GetAggregateBin()
@@ -37,7 +52,7 @@ items:
   nameWithType: NSWebAppUsage.GetAggregateBin()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetAggregateBin()
   type: Method
-  summary: "\n??\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetAggregateBin()
@@ -57,14 +72,14 @@ items:
   nameWithType: NSWebAppUsage.GetAggregateCount()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetAggregateCount()
   type: Method
-  summary: "\nNumber of times the specific soprotocol is accessed\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetAggregateCount()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Number of times the specific soprotocol is accessed
   example: 
   - "\n<pre><code>NSWebAppUsage thing;\nInteger aggregateCount = thing.GetAggregateCount();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebAppUsage.GetAssocId()
@@ -77,14 +92,14 @@ items:
   nameWithType: NSWebAppUsage.GetAssocId()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetAssocId()
   type: Method
-  summary: "\nAssociate Id\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetAssocId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Associate ID
   example: 
   - "\n<pre><code>NSWebAppUsage thing;\nInteger assocId = thing.GetAssocId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebAppUsage.GetTimestamp()
@@ -97,14 +112,14 @@ items:
   nameWithType: NSWebAppUsage.GetTimestamp()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetTimestamp()
   type: Method
-  summary: "\nWhich day the usage was logged\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: DateTime GetTimestamp()
     parameters: []
     return:
       type: CRMScript.Global.DateTime
-      description:
+      description: Which day the usage was logged
   example: 
   - "\n<pre><code>NSWebAppUsage thing;\nDateTime timestamp = thing.GetTimestamp();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebAppUsage.GetVersion()
@@ -117,7 +132,7 @@ items:
   nameWithType: NSWebAppUsage.GetVersion()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetVersion()
   type: Method
-  summary: "\n??\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetVersion()
@@ -137,14 +152,14 @@ items:
   nameWithType: NSWebAppUsage.GetViewState()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetViewState()
   type: Method
-  summary: "\nThe SoProtocol(ViewState)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: String GetViewState()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: The SoProtocol(ViewState)
   example: 
   - "\n<pre><code>NSWebAppUsage thing;\nString viewState = thing.GetViewState();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebAppUsage.GetWebAppUsageId()
@@ -157,31 +172,16 @@ items:
   nameWithType: NSWebAppUsage.GetWebAppUsageId()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetWebAppUsageId()
   type: Method
-  summary: "\nPrimary Key\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Integer GetWebAppUsageId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description:  Primary Key
   example: 
   - "\n<pre><code>NSWebAppUsage thing;\nInteger webAppUsageId = thing.GetWebAppUsageId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSWebAppUsage.#ctor
-  commentId: M:CRMScript.NetServer.NSWebAppUsage.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSWebAppUsage
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSWebAppUsage.#ctor
-  fullName: CRMScript.NetServer.NSWebAppUsage.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSWebAppUsage
-  example: 
 - uid: CRMScript.NetServer.NSWebAppUsage.SetAggregateBin(Integer)
   commentId: M:CRMScript.NetServer.NSWebAppUsage.SetAggregateBin(Integer)
   id: 'SetAggregateBin(Integer)'
@@ -192,7 +192,7 @@ items:
   nameWithType: NSWebAppUsage.SetAggregateBin(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetAggregateBin(Integer)
   type: Method
-  summary: "\n??\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetAggregateBin(Integer aggregateBin)
@@ -214,14 +214,14 @@ items:
   nameWithType: NSWebAppUsage.SetAggregateCount(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetAggregateCount(Integer)
   type: Method
-  summary: "\nNumber of times the specific soprotocol is accessed\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetAggregateCount(Integer aggregateCount)
     parameters:
     - id: aggregateCount
       type: CRMScript.Global.Integer
-      description: 
+      description: Number of times the specific soprotocol is accessed
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,33 +236,38 @@ items:
   nameWithType: NSWebAppUsage.SetAssocId(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetAssocId(Integer)
   type: Method
-  summary: "\nAssociate Id\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetAssocId(Integer assocId)
     parameters:
     - id: assocId
       type: CRMScript.Global.Integer
-      description: 
+      description: Associate ID
     return:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSWebAppUsage thing;\nInteger assocId;\nthing.SetAssocId(assocId);</code></pre>\n"
-- uid: CRMScript.NetServer.NSWebAppUsage.SetTimestamp()
-  commentId: M:CRMScript.NetServer.NSWebAppUsage.SetTimestamp()
-  id: 'SetTimestamp()'
+- uid: CRMScript.NetServer.NSWebAppUsage.SetTimestamp(DateTime)
+  commentId: M:CRMScript.NetServer.NSWebAppUsage.SetTimestamp(DateTime)
+  id: 'SetTimestamp(DateTime)'
   so.intellisense: NSWebAppUsage.SetTimestamp
   langs:
   - crmscript
-  name: 'SetTimestamp()'
-  nameWithType: NSWebAppUsage.SetTimestamp()
-  fullName: CRMScript.NetServer.NSWebAppUsage.SetTimestamp()
+  name: 'SetTimestamp(DateTime)'
+  nameWithType: NSWebAppUsage.SetTimestamp(DateTime)
+  fullName: CRMScript.NetServer.NSWebAppUsage.SetTimestamp(DateTime)
   type: Method
-  summary: "\nWhich day the usage was logged\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTimestamp(DateTime timestamp)
     parameters:
+    - id: timestamp
+      type: CRMScript.Global.DateTime
+      description: Which day the usage was logged
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSWebAppUsage thing;\nDateTime timestamp;\nthing.SetTimestamp(timestamp);</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebAppUsage.SetVersion(Integer)
@@ -275,7 +280,7 @@ items:
   nameWithType: NSWebAppUsage.SetVersion(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetVersion(Integer)
   type: Method
-  summary: "\n??\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetVersion(Integer version)
@@ -297,14 +302,14 @@ items:
   nameWithType: NSWebAppUsage.SetViewState(String)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetViewState(String)
   type: Method
-  summary: "\nThe SoProtocol(ViewState)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetViewState(String viewState)
     parameters:
     - id: viewState
       type: CRMScript.Global.String
-      description: 
+      description: The SoProtocol(ViewState)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -319,14 +324,14 @@ items:
   nameWithType: NSWebAppUsage.SetWebAppUsageId(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetWebAppUsageId(Integer)
   type: Method
-  summary: "\nPrimary Key\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetWebAppUsageId(Integer webAppUsageId)
     parameters:
     - id: webAppUsageId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary Key
     return:
       type: CRMScript.Global.Void
   example: 
