--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceDescriptionLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceDescriptionLine.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSPreferenceDescriptionLine.#ctor
   - CRMScript.NetServer.NSPreferenceDescriptionLine.GetDescription()
   - CRMScript.NetServer.NSPreferenceDescriptionLine.GetIsBuiltin()
   - CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescId()
   - CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescLineId()
   - CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefShowValue()
   - CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefValue()
-  - CRMScript.NetServer.NSPreferenceDescriptionLine.#ctor
   - CRMScript.NetServer.NSPreferenceDescriptionLine.SetDescription(String)
   - CRMScript.NetServer.NSPreferenceDescriptionLine.SetIsBuiltin(Bool)
   - CRMScript.NetServer.NSPreferenceDescriptionLine.SetPrefDescId(Integer)
@@ -25,126 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetDescription()
-  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSPreferenceDescriptionLine.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSPreferenceDescriptionLine.GetDescription()
-  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetDescription()
-  type: Method
-  summary: "\nDescription of preference value, multi-language parsed\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetIsBuiltin()
-  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetIsBuiltin()
-  id: 'GetIsBuiltin()'
-  so.intellisense: NSPreferenceDescriptionLine.GetIsBuiltin
-  langs:
-  - crmscript
-  name: 'GetIsBuiltin()'
-  nameWithType: NSPreferenceDescriptionLine.GetIsBuiltin()
-  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetIsBuiltin()
-  type: Method
-  summary: "\n1 = This row populated and maintained by SuperOffice\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsBuiltin()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nBool isBuiltin = thing.GetIsBuiltin();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescId()
-  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescId()
-  id: 'GetPrefDescId()'
-  so.intellisense: NSPreferenceDescriptionLine.GetPrefDescId
-  langs:
-  - crmscript
-  name: 'GetPrefDescId()'
-  nameWithType: NSPreferenceDescriptionLine.GetPrefDescId()
-  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescId()
-  type: Method
-  summary: "\nPreference description (parent)\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPrefDescId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nInteger prefDescId = thing.GetPrefDescId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescLineId()
-  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescLineId()
-  id: 'GetPrefDescLineId()'
-  so.intellisense: NSPreferenceDescriptionLine.GetPrefDescLineId
-  langs:
-  - crmscript
-  name: 'GetPrefDescLineId()'
-  nameWithType: NSPreferenceDescriptionLine.GetPrefDescLineId()
-  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescLineId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPrefDescLineId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nInteger prefDescLineId = thing.GetPrefDescLineId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefShowValue()
-  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefShowValue()
-  id: 'GetPrefShowValue()'
-  so.intellisense: NSPreferenceDescriptionLine.GetPrefShowValue
-  langs:
-  - crmscript
-  name: 'GetPrefShowValue()'
-  nameWithType: NSPreferenceDescriptionLine.GetPrefShowValue()
-  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefShowValue()
-  type: Method
-  summary: "\nDescriptive value, multilang-parsed, to put in list\n"
-  remarks: 
-  syntax: 
-    content: String GetPrefShowValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nString prefShowValue = thing.GetPrefShowValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefValue()
-  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefValue()
-  id: 'GetPrefValue()'
-  so.intellisense: NSPreferenceDescriptionLine.GetPrefValue
-  langs:
-  - crmscript
-  name: 'GetPrefValue()'
-  nameWithType: NSPreferenceDescriptionLine.GetPrefValue()
-  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefValue()
-  type: Method
-  summary: "\nPossible value\n"
-  remarks: 
-  syntax: 
-    content: String GetPrefValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nString prefValue = thing.GetPrefValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescriptionLine.#ctor
   commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.#ctor
   id: '#ctor'
@@ -160,6 +40,126 @@ items:
   syntax: 
     content: NSPreferenceDescriptionLine
   example: 
+- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetDescription()
+  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSPreferenceDescriptionLine.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSPreferenceDescriptionLine.GetDescription()
+  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetDescription()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Description of preference value, multi-language parsed
+  example: 
+  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetIsBuiltin()
+  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetIsBuiltin()
+  id: 'GetIsBuiltin()'
+  so.intellisense: NSPreferenceDescriptionLine.GetIsBuiltin
+  langs:
+  - crmscript
+  name: 'GetIsBuiltin()'
+  nameWithType: NSPreferenceDescriptionLine.GetIsBuiltin()
+  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetIsBuiltin()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetIsBuiltin()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: 1 = This row populated and maintained by SuperOffice
+  example: 
+  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nBool isBuiltin = thing.GetIsBuiltin();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescId()
+  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescId()
+  id: 'GetPrefDescId()'
+  so.intellisense: NSPreferenceDescriptionLine.GetPrefDescId
+  langs:
+  - crmscript
+  name: 'GetPrefDescId()'
+  nameWithType: NSPreferenceDescriptionLine.GetPrefDescId()
+  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetPrefDescId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Preference description (parent)
+  example: 
+  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nInteger prefDescId = thing.GetPrefDescId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescLineId()
+  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescLineId()
+  id: 'GetPrefDescLineId()'
+  so.intellisense: NSPreferenceDescriptionLine.GetPrefDescLineId
+  langs:
+  - crmscript
+  name: 'GetPrefDescLineId()'
+  nameWithType: NSPreferenceDescriptionLine.GetPrefDescLineId()
+  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefDescLineId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetPrefDescLineId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nInteger prefDescLineId = thing.GetPrefDescLineId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefShowValue()
+  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefShowValue()
+  id: 'GetPrefShowValue()'
+  so.intellisense: NSPreferenceDescriptionLine.GetPrefShowValue
+  langs:
+  - crmscript
+  name: 'GetPrefShowValue()'
+  nameWithType: NSPreferenceDescriptionLine.GetPrefShowValue()
+  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefShowValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetPrefShowValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Descriptive value, multilang-parsed, to put in list
+  example: 
+  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nString prefShowValue = thing.GetPrefShowValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefValue()
+  commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefValue()
+  id: 'GetPrefValue()'
+  so.intellisense: NSPreferenceDescriptionLine.GetPrefValue
+  langs:
+  - crmscript
+  name: 'GetPrefValue()'
+  nameWithType: NSPreferenceDescriptionLine.GetPrefValue()
+  fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.GetPrefValue()
+  type: Method
+  summary: "\ne\n"
+  remarks: 
+  syntax: 
+    content: String GetPrefValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Possible valu
+  example: 
+  - "\n<pre><code>NSPreferenceDescriptionLine thing;\nString prefValue = thing.GetPrefValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescriptionLine.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSPreferenceDescriptionLine.SetDescription(String)
   id: 'SetDescription(String)'
@@ -170,14 +170,14 @@ items:
   nameWithType: NSPreferenceDescriptionLine.SetDescription(String)
   fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.SetDescription(String)
   type: Method
-  summary: "\nDescription of preference value, multi-language parsed\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: Description of preference value, multi-language parsed
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSPreferenceDescriptionLine.SetIsBuiltin(Bool)
   fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.SetIsBuiltin(Bool)
   type: Method
-  summary: "\n1 = This row populated and maintained by SuperOffice\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetIsBuiltin(Bool isBuiltin)
     parameters:
     - id: isBuiltin
       type: CRMScript.Global.Bool
-      description: 
+      description: 1 = This row populated and maintained by SuperOffice
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSPreferenceDescriptionLine.SetPrefDescId(Integer)
   fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.SetPrefDescId(Integer)
   type: Method
-  summary: "\nPreference description (parent)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetPrefDescId(Integer prefDescId)
     parameters:
     - id: prefDescId
       type: CRMScript.Global.Integer
-      description: 
+      description: Preference description (parent)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSPreferenceDescriptionLine.SetPrefDescLineId(Integer)
   fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.SetPrefDescLineId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetPrefDescLineId(Integer prefDescLineId)
     parameters:
     - id: prefDescLineId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSPreferenceDescriptionLine.SetPrefShowValue(String)
   fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.SetPrefShowValue(String)
   type: Method
-  summary: "\nDescriptive value, multilang-parsed, to put in list\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetPrefShowValue(String prefShowValue)
     parameters:
     - id: prefShowValue
       type: CRMScript.Global.String
-      description: 
+      description: Descriptive value, multilang-parsed, to put in list
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSPreferenceDescriptionLine.SetPrefValue(String)
   fullName: CRMScript.NetServer.NSPreferenceDescriptionLine.SetPrefValue(String)
   type: Method
-  summary: "\nPossible value\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetPrefValue(String prefValue)
     parameters:
     - id: prefValue
       type: CRMScript.Global.String
-      description: 
+      description: Possible value
     return:
       type: CRMScript.Global.Void
   example: 
