--- a/docs/api-reference/CRMScript.NetServer.NSPreviews.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviews.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSPreviews.#ctor
   fullName: CRMScript.NetServer.NSPreviews.#ctor
   type: Constructor
-  summary: "\nThis service provides Previews. It is based on 'Preview hints', strings that may either be a Preview text (if provided by someone else), or a set of key/value pairs or other specifications.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: NSPreviews
