--- a/docs/api-reference/CRMScript.NetServer.NSProviderInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProviderInfo.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSProviderInfo.#ctor
   - CRMScript.NetServer.NSProviderInfo.GetName()
   - CRMScript.NetServer.NSProviderInfo.GetSupportedMessagingFormats()
   - CRMScript.NetServer.NSProviderInfo.GetSupportsConfig()
-  - CRMScript.NetServer.NSProviderInfo.#ctor
   - CRMScript.NetServer.NSProviderInfo.SetName(String)
   - CRMScript.NetServer.NSProviderInfo.SetSupportedMessagingFormats(String[])
   - CRMScript.NetServer.NSProviderInfo.SetSupportsConfig(Bool)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSProviderInfo.GetName()
-  commentId: M:CRMScript.NetServer.NSProviderInfo.GetName()
-  id: 'GetName()'
-  so.intellisense: NSProviderInfo.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSProviderInfo.GetName()
-  fullName: CRMScript.NetServer.NSProviderInfo.GetName()
-  type: Method
-  summary: "\nUnique name of the provider plugin\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProviderInfo thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProviderInfo.GetSupportedMessagingFormats()
-  commentId: M:CRMScript.NetServer.NSProviderInfo.GetSupportedMessagingFormats()
-  id: 'GetSupportedMessagingFormats()'
-  so.intellisense: NSProviderInfo.GetSupportedMessagingFormats
-  langs:
-  - crmscript
-  name: 'GetSupportedMessagingFormats()'
-  nameWithType: NSProviderInfo.GetSupportedMessagingFormats()
-  fullName: CRMScript.NetServer.NSProviderInfo.GetSupportedMessagingFormats()
-  type: Method
-  summary: "\nThis value can typically be &quot;sms/160&quot;, &quot;sms/mms&quot;, &quot;smtp/rfc822&quot;<p></p>\n<strong>Returns:</strong>String[]<p></p>\n<pre><code>NSProviderInfo thing;\nString[] supportedMessagingFormats = thing.GetSupportedMessagingFormats();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String[] GetSupportedMessagingFormats()
-    parameters: []
-    return:
-      type: CRMScript.Global.String[]
-      description:
-  example: 
-  - "\n<pre><code>NSProviderInfo thing;\nString[] supportedMessagingFormats = thing.GetSupportedMessagingFormats();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProviderInfo.GetSupportsConfig()
-  commentId: M:CRMScript.NetServer.NSProviderInfo.GetSupportsConfig()
-  id: 'GetSupportsConfig()'
-  so.intellisense: NSProviderInfo.GetSupportsConfig
-  langs:
-  - crmscript
-  name: 'GetSupportsConfig()'
-  nameWithType: NSProviderInfo.GetSupportsConfig()
-  fullName: CRMScript.NetServer.NSProviderInfo.GetSupportsConfig()
-  type: Method
-  summary: "\nTrue if it supports the config parameters to the sending methods\n"
-  remarks: 
-  syntax: 
-    content: Bool GetSupportsConfig()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSProviderInfo thing;\nBool supportsConfig = thing.GetSupportsConfig();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProviderInfo.#ctor
   commentId: M:CRMScript.NetServer.NSProviderInfo.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSProviderInfo
   example: 
+- uid: CRMScript.NetServer.NSProviderInfo.GetName()
+  commentId: M:CRMScript.NetServer.NSProviderInfo.GetName()
+  id: 'GetName()'
+  so.intellisense: NSProviderInfo.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSProviderInfo.GetName()
+  fullName: CRMScript.NetServer.NSProviderInfo.GetName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Unique name of the provider plugin
+  example: 
+  - "\n<pre><code>NSProviderInfo thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProviderInfo.GetSupportedMessagingFormats()
+  commentId: M:CRMScript.NetServer.NSProviderInfo.GetSupportedMessagingFormats()
+  id: 'GetSupportedMessagingFormats()'
+  so.intellisense: NSProviderInfo.GetSupportedMessagingFormats
+  langs:
+  - crmscript
+  name: 'GetSupportedMessagingFormats()'
+  nameWithType: NSProviderInfo.GetSupportedMessagingFormats()
+  fullName: CRMScript.NetServer.NSProviderInfo.GetSupportedMessagingFormats()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String[] GetSupportedMessagingFormats()
+    parameters: []
+    return:
+      type: CRMScript.Global.String[]
+      description: This value can typically be &quot;sms/160&quot;, &quot;sms/mms&quot;, &quot;smtp/rfc822&quot;
+  example: 
+  - "\n<pre><code>NSProviderInfo thing;\nString[] supportedMessagingFormats = thing.GetSupportedMessagingFormats();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProviderInfo.GetSupportsConfig()
+  commentId: M:CRMScript.NetServer.NSProviderInfo.GetSupportsConfig()
+  id: 'GetSupportsConfig()'
+  so.intellisense: NSProviderInfo.GetSupportsConfig
+  langs:
+  - crmscript
+  name: 'GetSupportsConfig()'
+  nameWithType: NSProviderInfo.GetSupportsConfig()
+  fullName: CRMScript.NetServer.NSProviderInfo.GetSupportsConfig()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetSupportsConfig()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if it supports the config parameters to the sending methods
+  example: 
+  - "\n<pre><code>NSProviderInfo thing;\nBool supportsConfig = thing.GetSupportsConfig();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProviderInfo.SetName(String)
   commentId: M:CRMScript.NetServer.NSProviderInfo.SetName(String)
   id: 'SetName(String)'
@@ -104,14 +104,14 @@ items:
   nameWithType: NSProviderInfo.SetName(String)
   fullName: CRMScript.NetServer.NSProviderInfo.SetName(String)
   type: Method
-  summary: "\nUnique name of the provider plugin\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Unique name of the provider plugin
     return:
       type: CRMScript.Global.Void
   example: 
@@ -126,14 +126,14 @@ items:
   nameWithType: NSProviderInfo.SetSupportedMessagingFormats(String[])
   fullName: CRMScript.NetServer.NSProviderInfo.SetSupportedMessagingFormats(String[])
   type: Method
-  summary: "\nThis value can typically be &quot;sms/160&quot;, &quot;sms/mms&quot;, &quot;smtp/rfc822&quot;\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetSupportedMessagingFormats(String[] supportedMessagingFormats)
     parameters:
     - id: supportedMessagingFormats
       type: CRMScript.Global.String[]
-      description: 
+      description: This value can typically be &quot;sms/160&quot;, &quot;sms/mms&quot;, &quot;smtp/rfc822&quot;
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,15 +148,15 @@ items:
   nameWithType: NSProviderInfo.SetSupportsConfig(Bool)
   fullName: CRMScript.NetServer.NSProviderInfo.SetSupportsConfig(Bool)
   type: Method
-  summary: "\nTrue if it supports the config parameters to the sending methods\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetSupportsConfig(Bool supportsConfig)
     parameters:
     - id: supportsConfig
       type: CRMScript.Global.Bool
-      description: 
-    return:
+      description: True if it supports the config parameters to the sending methods
+    return: 
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSProviderInfo thing;\nBool supportsConfig;\nthing.SetSupportsConfig(supportsConfig);</code></pre>\n"
