--- a/docs/api-reference/CRMScript.NetServer.NSWebhookResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhookResult.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSWebhookResult.#ctor
   - CRMScript.NetServer.NSWebhookResult.GetMessage()
   - CRMScript.NetServer.NSWebhookResult.GetSuccess()
-  - CRMScript.NetServer.NSWebhookResult.#ctor
   - CRMScript.NetServer.NSWebhookResult.SetMessage(String)
   - CRMScript.NetServer.NSWebhookResult.SetSuccess(Bool)
   name: NSWebhookResult
@@ -17,46 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSWebhookResult.GetMessage()
-  commentId: M:CRMScript.NetServer.NSWebhookResult.GetMessage()
-  id: 'GetMessage()'
-  so.intellisense: NSWebhookResult.GetMessage
-  langs:
-  - crmscript
-  name: 'GetMessage()'
-  nameWithType: NSWebhookResult.GetMessage()
-  fullName: CRMScript.NetServer.NSWebhookResult.GetMessage()
-  type: Method
-  summary: "\nHeaders and body of response from webhook\n"
-  remarks: 
-  syntax: 
-    content: String GetMessage()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSWebhookResult thing;\nString message = thing.GetMessage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSWebhookResult.GetSuccess()
-  commentId: M:CRMScript.NetServer.NSWebhookResult.GetSuccess()
-  id: 'GetSuccess()'
-  so.intellisense: NSWebhookResult.GetSuccess
-  langs:
-  - crmscript
-  name: 'GetSuccess()'
-  nameWithType: NSWebhookResult.GetSuccess()
-  fullName: CRMScript.NetServer.NSWebhookResult.GetSuccess()
-  type: Method
-  summary: "\nWas call to webhook successful? (200 OK)\n"
-  remarks: 
-  syntax: 
-    content: Bool GetSuccess()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSWebhookResult thing;\nBool success = thing.GetSuccess();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebhookResult.#ctor
   commentId: M:CRMScript.NetServer.NSWebhookResult.#ctor
   id: '#ctor'
@@ -72,6 +32,46 @@ items:
   syntax: 
     content: NSWebhookResult
   example: 
+- uid: CRMScript.NetServer.NSWebhookResult.GetMessage()
+  commentId: M:CRMScript.NetServer.NSWebhookResult.GetMessage()
+  id: 'GetMessage()'
+  so.intellisense: NSWebhookResult.GetMessage
+  langs:
+  - crmscript
+  name: 'GetMessage()'
+  nameWithType: NSWebhookResult.GetMessage()
+  fullName: CRMScript.NetServer.NSWebhookResult.GetMessage()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetMessage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Headers and body of response from webhook
+  example: 
+  - "\n<pre><code>NSWebhookResult thing;\nString message = thing.GetMessage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSWebhookResult.GetSuccess()
+  commentId: M:CRMScript.NetServer.NSWebhookResult.GetSuccess()
+  id: 'GetSuccess()'
+  so.intellisense: NSWebhookResult.GetSuccess
+  langs:
+  - crmscript
+  name: 'GetSuccess()'
+  nameWithType: NSWebhookResult.GetSuccess()
+  fullName: CRMScript.NetServer.NSWebhookResult.GetSuccess()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetSuccess()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Was call to webhook successful? (200 OK)
+  example: 
+  - "\n<pre><code>NSWebhookResult thing;\nBool success = thing.GetSuccess();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebhookResult.SetMessage(String)
   commentId: M:CRMScript.NetServer.NSWebhookResult.SetMessage(String)
   id: 'SetMessage(String)'
@@ -82,14 +82,14 @@ items:
   nameWithType: NSWebhookResult.SetMessage(String)
   fullName: CRMScript.NetServer.NSWebhookResult.SetMessage(String)
   type: Method
-  summary: "\nHeaders and body of response from webhook\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetMessage(String message)
     parameters:
     - id: message
       type: CRMScript.Global.String
-      description: 
+      description: Headers and body of response from webhook
     return:
       type: CRMScript.Global.Void
   example: 
@@ -104,14 +104,14 @@ items:
   nameWithType: NSWebhookResult.SetSuccess(Bool)
   fullName: CRMScript.NetServer.NSWebhookResult.SetSuccess(Bool)
   type: Method
-  summary: "\nWas call to webhook successful? (200 OK)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetSuccess(Bool success)
     parameters:
     - id: success
       type: CRMScript.Global.Bool
-      description: 
+      description: Was call to webhook successful? (200 OK)
     return:
       type: CRMScript.Global.Void
   example: 
